@@ -1913,8 +1913,8 @@ n_A_MaxHP += SkillSearch(156) * 200;
 	if(n_A_HEAD_DEF_PLUS >= 6 && EquipNumSearch(565)){
 		w += 1;}
 
-		//Entweihen Hairband - Eden equipment - zonesoldier - 6/2/2018
-		//Increase MATK + 1% per upgrade past 5th upgrade
+	//Entweihen Hairband - Eden equipment - zonesoldier - 6/2/2018
+	//Increase MATK + 1% per upgrade past 5th upgrade
 	if(n_A_HEAD_DEF_PLUS >= 5 && EquipNumSearch(1605))
 	{
 		w += 1;
