@@ -17,6 +17,12 @@
 - Removed all the old changelogs; [Kato]
 - Issue #22: Added Reforged Lord Kaho's Horns; [Kato]
 - Issue #24: Added Advanced Fin Helm; [Kato]
+- Issue #7: Added Pajamas Hats; [ZoneSoldier]
+- Issue #32: Changed Engineer's Hat to Engineer Cap; [ZoneSoldier]
+- Issue #33: Changed Rabbit Ear to Rabbit Earplugs; [ZoneSoldier]
+- Issue #34: Added Eden Items; [ZoneSoldier]
 [Update 2018-06-03]
 - Fixed the delays, set all to 0.33 default, taken out the save in cookie; [Kato]
 - Revamp in index.html, nixed the changelog, fixed html selects, indented the code (at least a little bit), fixed link to tRO's mobDB and etcetera; [Kato]
+- #Issue #30 Added Legionnaire Hat
+- #Issue #41 Changed Name from Scarf Belt to Belcarf
